loader added new

--- a/public/landing/css/style.css
+++ b/public/landing/css/style.css
@@ -37,7 +37,9 @@
 a.nav-link.active {
     font-family:HelveticaNowDisplay !important;
 }
-
+/*ul#navbar-nav .active a {
+    font-family: HelveticaNowDisplay !important;
+}*/
 /* ******************************
  CSS
 ****************************** */
