z-index added in preloader so that logo doesn't come in loading

--- a/public/landing/css/style.css
+++ b/public/landing/css/style.css
@@ -1123,6 +1123,7 @@ ul#navbar-nav li.nav-item.socail {
 }
 .footer-top {
     font-family: HelveticaNowDisplay;
+    padding: 68px 0px 20px 0px;
 }
 
 
